@@ -4,7 +4,6 @@ include $(top_srcdir)/doc/tutorial/src/sources.mk
 include $(top_srcdir)/itpp/sources.mk
 include $(top_srcdir)/itpp/base/sources.mk
 include $(top_srcdir)/itpp/base/algebra/sources.mk
-include $(top_srcdir)/itpp/base/bessel/sources.mk
 include $(top_srcdir)/itpp/base/math/sources.mk
 include $(top_srcdir)/itpp/comm/sources.mk
 include $(top_srcdir)/itpp/fixed/sources.mk
@@ -30,7 +29,6 @@ html/index.html: doxygen_html.cfg \
 	$(h_sources) $(cpp_sources) \
 	$(h_base_sources) $(cpp_base_sources) \
 	$(h_base_algebra_sources) $(cpp_base_algebra_sources) \
-	$(h_base_bessel_sources) $(cpp_base_bessel_sources) \
 	$(h_base_math_sources) $(cpp_base_math_sources) \
 	$(h_comm_sources) $(cpp_comm_sources) \
 	$(h_fixed_sources) $(cpp_fixed_sources) \
