@@ -1,9 +1,11 @@
+noinst_h_base_algebra_sources = \
+	$(top_srcdir)/itpp/base/algebra/lapack.h
+
 h_base_algebra_sources = \
 	$(top_srcdir)/itpp/base/algebra/cholesky.h \
 	$(top_srcdir)/itpp/base/algebra/det.h \
 	$(top_srcdir)/itpp/base/algebra/eigen.h \
 	$(top_srcdir)/itpp/base/algebra/inv.h \
-	$(top_srcdir)/itpp/base/algebra/lapack.h \
 	$(top_srcdir)/itpp/base/algebra/ls_solve.h \
 	$(top_srcdir)/itpp/base/algebra/lu.h \
 	$(top_srcdir)/itpp/base/algebra/qr.h \
@@ -20,3 +22,4 @@ cpp_base_algebra_sources = \
 	$(top_srcdir)/itpp/base/algebra/qr.cpp \
 	$(top_srcdir)/itpp/base/algebra/schur.cpp \
 	$(top_srcdir)/itpp/base/algebra/svd.cpp
+
